# RTOS-From-Scratch

./: .gitmodules  CMakeLists.txt  README.md  main.c  startup.c  tm4c123gh6pm.h
lib/: .gitignore
